<resources>
    <string name="app_name">My Travel</string>

    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
        has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type
        and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into
        electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of
        Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus
        PageMaker including versions of Lorem Ipsum.
    </string>

    <string name="indicator_text">%d/3</string>
    <string name="passengers">Passengers</string>
    <string name="total_price">Total</string>
    <string name="duration">Duration</string>
    <string name="facilities_room">Facilities</string>
    <string name="filter">Filter</string>
    <string name="search">Search</string>
    <string name="hotel_price">%s/night</string>
    <string name="payment_method">Payment</string>
    <string name="more_facilities">More Facilities</string>
    <string name="reviews">Reviews</string>
    <string name="status">Status</string>
    <string name="city">City</string>
    <string name="date">Date</string>
    <string name="rental_duration">%s days</string>
    <string name="city_trip">%s - %s</string>
    <string name="trip_information">%s - %s (%s)</string>
    <string name="price_title_adult">%s (Adult) %s</string>
    <string name="price_title_child">%s (Child) %s</string>
    <string name="price_title_infant">%s (Infant) %s</string>
    <string name="price_title_rental">%s x %s days</string>
    <string name="confirmation_number">Confirmation Number</string>
    <string name="weather">%s℃</string>

    <string name="more">More</string>
    <string name="less">Less</string>
    <string name="transaction_success">Transaction Success</string>
    <string name="hotel_information">%s Night - %s</string>
    <string name="trip">Trip</string>
    <string name="information">Information</string>
    <string name="machine">Machine</string>
    <string name="cabin">Cabin</string>
    <string name="proceed">Proceed</string>
    <string name="detail_price">Detail Price</string>
    <string name="location">Location</string>
    <string name="seat">Seat</string>
    <string name="book_review">Book Review</string>
    <string name="contact">Contact</string>
    <string name="additional_info">Additional Info</string>
    <string name="instructions">Instructions</string>
    <string name="image_transition_name">ImageTrans</string>
    <string name="text_transition_name">TextTrans</string>
    <string name="select_payment">Please select payment method</string>
    <string name="please_confirm_transaction">Please go to Transaction Page to confirm your payment</string>
    <string name="explore">Explore</string>
    <string name="transaction">Transaction</string>
    <string name="settings">Settings</string>
    <string name="empty_list">Empty List</string>
    <string name="start_from">Start from</string>
    <string name="confirm">Confirm</string>
    <string name="payment">Payment</string>
    <string name="cancel_payment">Cancel Payment</string>
    <string name="no_data">There are no data available</string>
    <string name="flight">Flight</string>
    <string name="hotel">Hotel</string>
    <string name="train">Train</string>
    <string name="rental">Rental</string>
    <string name="book_ticket">Book Ticket</string>
    <string name="about">About</string>
    <string name="gallery">Gallery</string>
    <string name="pay">Pay</string>
    <string name="select">Select</string>
    <string name="rooms">Rooms</string>
    <string name="refundable">Refundable</string>
    <string name="breakfast">Breakfast</string>
    <string name="wifi">WiFi</string>
    <string name="processing_transaction">Processing Transaction</string>
    <string name="print_ticket">Use this code to print ticket</string>
    <string name="virtual_account">Virtual Account</string>
</resources>
