<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.payment.finish.select.PaymentSelectFragment">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:id="@+id/payment"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent">

        <fr.ganfra.materialspinner.MaterialSpinner
                android:id="@+id/pick_payment_method"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:ms_arrowSize="8dp"
                app:ms_floatingLabelText="Payment"
                app:ms_hint="Payment"
                app:ms_multiline="true"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/merchant"
                android:visibility="gone">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/payment"
                    android:textSize="12sp"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textSize="16sp"
                    tools:text="Merchant 1"
                    android:textColor="@color/black"
                    android:id="@+id/payment_merchant"/>

        </LinearLayout>

    </RelativeLayout>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/payment"
            android:layout_marginTop="8dp"
            android:textStyle="bold"
            android:id="@+id/header_instruction"
            android:text="@string/instructions"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>

    <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:id="@+id/recycler_instructions"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header_instruction"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/proceed_button"/>

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:background="#cccccc"
            android:textColor="@color/primaryTextColor"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/proceed"
            android:id="@+id/proceed_button"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/payment"
            app:layout_constraintBottom_toTopOf="@+id/proceed_button"
            android:text="@string/select_payment"
            android:textSize="16sp"
            android:gravity="center"
            android:id="@+id/payment_method_unselected"/>

    <RelativeLayout
            android:id="@+id/progress_layout"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray"
                android:alpha=".6"/>

        <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"/>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>