<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.payment.finish.confirm.PaymentConfirmFragment">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:padding="16dp"
            android:background="#ffc53a"
            android:id="@+id/info">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Transaction"
                android:layout_toStartOf="@+id/transaction_price"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@color/primaryTextColor"
                android:id="@+id/transaction_main_information"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Date"
                android:layout_below="@+id/transaction_main_information"
                android:textSize="12sp"
                android:id="@+id/transaction_date"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                tools:text="Rp 320.000"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:id="@+id/transaction_price"/>

    </RelativeLayout>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment_method"
            android:id="@+id/payment_header"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/info"
            app:layout_constraintStart_toStartOf="parent"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/payment_header"
            tools:text="Transfer Bank Mandiri"
            android:textSize="16sp"
            android:layout_marginStart="8dp"
            android:id="@+id/payment_method"
            android:textColor="@android:color/black"
            android:layout_marginTop="4dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/virtual_account"
            android:id="@+id/virtual_header"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/payment_method"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/virtual_header"
            android:layout_marginTop="4dp"
            android:background="@drawable/rounded_background"
            android:padding="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:id="@+id/payment_virtual_account"
            android:text="1111 1111 1111 1111"
            android:textSize="16sp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instructions"
            android:layout_marginStart="8dp"
            android:id="@+id/instruction_header"
            app:layout_constraintTop_toBottomOf="@+id/payment_virtual_account"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"/>

    <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/confirm_button"
            app:layout_constraintTop_toBottomOf="@+id/instruction_header"
            android:layout_marginTop="4dp"
            android:id="@+id/recycler_instructions"/>

    <Button
            android:id="@+id/confirm_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#cccccc"
            android:textColor="@color/primaryTextColor"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/confirm"
            android:textAllCaps="false"/>

</android.support.constraint.ConstraintLayout>