<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color"
        tools:context=".ui.tickets.detail.rental.DetailRentalFragment">

    <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/book_button"
            app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:src="@drawable/avanza"
                    android:scaleType="fitXY"
                    android:transitionName="@string/image_transition_name"
                    android:id="@+id/rental_detail_image"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:contentDescription="@null"
                    tools:targetApi="lollipop"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Avanza"
                    android:textSize="16sp"
                    android:textColor="@color/primaryTextColor"
                    android:textStyle="bold"
                    android:id="@+id/rental_detail_car"
                    app:layout_constraintTop_toBottomOf="@+id/rental_detail_image"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Cahya Abadi"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rental_detail_car"
                    android:id="@+id/rental_detail_rental"
                    android:layout_marginStart="8dp"/>

            <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="?android:attr/ratingBarStyleSmall"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/rental_detail_car"
                    app:layout_constraintBottom_toBottomOf="@+id/rental_detail_rental"
                    android:layout_marginEnd="8dp"
                    android:id="@+id/rental_detail_rating"/>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    app:layout_constraintTop_toBottomOf="@+id/rental_detail_rental"
                    android:layout_marginTop="8dp"
                    android:id="@+id/divider"
                    android:background="@android:color/darker_gray"
                    android:alpha=".6"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/information"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:id="@+id/header_information"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="16sp"
                    app:layout_constraintTop_toBottomOf="@+id/divider"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"/>

            <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/header_information"
                    android:layout_marginTop="8dp"
                    android:background="@color/white"
                    android:padding="8dp"
                    android:id="@+id/information">

                <android.support.constraint.Guideline
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/guideline"
                        app:layout_constraintGuide_begin="192dp"
                        android:orientation="vertical"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/city"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:id="@+id/city"
                        android:textSize="12sp"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Bogor"
                        android:textSize="15sp"
                        app:layout_constraintStart_toStartOf="parent"
                        android:id="@+id/detail_rental_city"
                        app:layout_constraintTop_toBottomOf="@+id/city"
                        android:layout_marginTop="4dp"
                        android:textColor="@color/black"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/guideline"
                        android:id="@+id/date"
                        android:textSize="12sp"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="18 March 2019"
                        android:textSize="15sp"
                        app:layout_constraintStart_toEndOf="@+id/guideline"
                        android:id="@+id/detail_rental_date"
                        app:layout_constraintTop_toBottomOf="@+id/date"
                        android:layout_marginTop="4dp"
                        android:textColor="@color/black"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/duration"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/detail_rental_city"
                        app:layout_constraintStart_toStartOf="parent"
                        android:id="@+id/duration"
                        android:textSize="12sp"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="3 days"
                        android:textSize="15sp"
                        app:layout_constraintStart_toStartOf="parent"
                        android:id="@+id/detail_rental_duration"
                        app:layout_constraintTop_toBottomOf="@+id/duration"
                        android:layout_marginTop="4dp"
                        android:textColor="@color/black"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/machine"
                        app:layout_constraintTop_toBottomOf="@+id/detail_rental_date"
                        android:layout_marginTop="8dp"
                        app:layout_constraintStart_toEndOf="@+id/guideline"
                        android:id="@+id/machine"
                        android:textSize="12sp"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="RX Machine"
                        android:textSize="15sp"
                        app:layout_constraintStart_toEndOf="@+id/guideline"
                        android:id="@+id/detail_rental_machine"
                        app:layout_constraintTop_toBottomOf="@+id/machine"
                        android:layout_marginTop="4dp"
                        android:textColor="@color/black"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/seat"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/detail_rental_duration"
                        app:layout_constraintStart_toStartOf="parent"
                        android:id="@+id/seat"
                        android:textSize="12sp"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="6 seats layout"
                        android:textSize="15sp"
                        app:layout_constraintStart_toStartOf="parent"
                        android:id="@+id/detail_rental_seat"
                        app:layout_constraintTop_toBottomOf="@+id/seat"
                        android:layout_marginTop="4dp"
                        android:textColor="@color/black"/>

            </android.support.constraint.ConstraintLayout>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reviews"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:id="@+id/header_review"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="16sp"
                    app:layout_constraintTop_toBottomOf="@+id/information"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"/>

            <android.support.v7.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/header_review"
                    android:layout_marginTop="8dp"
                    android:id="@+id/recycler_review"
                    android:background="@color/white"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_price"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:id="@+id/header_price"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="16sp"
                    app:layout_constraintTop_toBottomOf="@+id/recycler_review"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"/>

            <RelativeLayout
                    app:layout_constraintTop_toBottomOf="@+id/header_price"
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:layout_toStartOf="@+id/rental_price"
                        android:id="@+id/rental_price_title"
                        tools:text="Rental For 3 days"
                        android:textColor="@color/black"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Rp 150.000"
                        android:padding="8dp"
                        android:id="@+id/rental_price"
                        android:layout_alignParentEnd="true"/>

                <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@android:color/darker_gray"
                        android:layout_below="@+id/rental_price_title"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:alpha=".5"
                        android:id="@+id/divider_two"/>

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/divider_two"
                        android:layout_toStartOf="@+id/total_price"
                        android:text="@string/total_price"
                        android:padding="8dp"
                        android:textColor="@color/black"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Rp 150.000"
                        android:textColor="@color/primaryTextColor"
                        android:textStyle="bold"
                        android:padding="8dp"
                        android:id="@+id/total_price"
                        android:layout_below="@+id/divider_two"
                        android:layout_alignParentEnd="true"/>

            </RelativeLayout>

        </android.support.constraint.ConstraintLayout>

    </android.support.v4.widget.NestedScrollView>

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="Book"
            android:background="@color/secondaryDarkColor"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:id="@+id/book_button"/>

</android.support.constraint.ConstraintLayout>